changes for Syncope 4